--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,4 @@ name = "repl-nix-workspace"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
-dependencies = [
-    "openai>=1.59.6",
-]
+dependencies = []
