Agent query: Are the static files (CSS and JS) loading correctly, and is the user interface styled properly?
Implement Flask app with Google Sheets feedback integration.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/55277edd-5a47-4095-8d80-80b1638ad528/76eabea7-ff25-4be0-adb7-53531652f9ac.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "flask>=3.1.0",
+    "google-api-python-client>=2.158.0",
+    "google-auth>=2.37.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.1",
     "trafilatura>=2.0.0",
 ]
