--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "flask-login>=0.6.3",
     "flask>=3.1.0",
     "google-api-python-client>=2.158.0",
     "google-auth>=2.37.0",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "trafilatura>=2.0.0",
+    "oauthlib>=3.2.2",
 ]
